Impostazione attributo lazy loading
Le immagini ora vengono caricate solo quando vengono visualizzate, riducendo così il tempo di caricamento iniziale del sito

--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@ table img{
 			<!-- Intro -->
 			<article id="intro">
 				<h2 class="major">La nostra storia</h2>
-				<span class="image main"><img src="images/storia.jpg" alt="" /></span>
+				<span class="image main"><img src="images/storia.jpg" loading="lazy" /></span>
 				<p>Il Coro Voci dell'Orobica nasce nel Novembre 2017.</p>
 				<p>Il nucleo originario dei coristi è costituito da Alpini che hanno fatto parte del coro militare della ormai sciolta Brigata Alpina Orobica che aveva sede a Merano (BZ).</p>
 				<p>La compagine corale vuole evocare sicuramente l'origine, ma, pur nella fedeltà dell'origine testimoniata dal cappello Alpino che alcuni indossano, si apre oggi ad accogliere tra le sue fila quanti rimangono affascinati dal canto di montagna e, più in generale, dal canto corale nelle sue diverse sfaccettature.</p>
 				<p>Fra le esibizioni recenti si annovera la prestigiosa animazione della liturgia del Duomo di Milano nel maggio 2019 nonché la performance artistica dell'Orobie Film Festival 2020 di Bergamo.</p>
 				<p>La formazione sistematica, fatta di molto esercizio vocale, ma anche di percorsi alla scoperta degli elementi teorici che formano la cultura del "bel canto", hanno portato dopo meno di due anni a risultati veramente apprezzabili.</p>
 				<p>L'amore per i canti della tradizione militare e popolare, questo è il repertorio generalmente richiesto e proposto, spinge oggi il coro anche allo studio di un repertorio che va oltre a quello tradizionalmente alpino e del canto sacro; un mondo che, pur lontano dalla cultura militare, ne condivide gli orizzonti dei valori sacri all'uomo, della ricerca di ciò che ci supera e, perché no, rappresenta l'origine di qualsiasi forma di canto corale.</p>
-				<span class="image main"><img src="images/coristi/tutti.jpg" alt="" /></span>
+				<span class="image main"><img src="images/coristi/tutti.jpg" loading="lazy" /></span>
 			</article>
 
 			<!-- I concerti -->
@@ -79,61 +79,61 @@ table img{
 				<h3>2019</h3>
 				<span class="image main"><table>
 					<tr>
-						<td><a href="images/locandine/20190219-uggiate.jpg" target="_blank"><img src="images/locandine/20190219-uggiate.jpg"></a></td>
-						<td><a href="images/locandine/20190317-brescia.jpg" target="_blank"><img src="images/locandine/20190317-brescia.jpg"></a></td>
-						<td><a href="images/locandine/20190519-milano.jpg" target="_blank"><img src="images/locandine/20190519-milano.jpg"></a></td>
+						<td><a href="images/locandine/20190219-uggiate.jpg" target="_blank"><img src="images/locandine/20190219-uggiate.jpg" loading="lazy"></a></td>
+						<td><a href="images/locandine/20190317-brescia.jpg" target="_blank"><img src="images/locandine/20190317-brescia.jpg" loading="lazy"></a></td>
+						<td><a href="images/locandine/20190519-milano.jpg" target="_blank"><img src="images/locandine/20190519-milano.jpg" loading="lazy"></a></td>
 					</tr>
 					<tr>
-						<td><a href="images/locandine/20190601-seriate.jpg" target="_blank"><img src="images/locandine/20190601-seriate.jpg"></a></td>
-						<td><a href="images/locandine/20190622-bustoarsizio.jpg" target="_blank"><img src="images/locandine/20190622-bustoarsizio.jpg"></a></td>
-						<td><a href="images/locandine/20191019-chiavenna.jpg" target="_blank"><img src="images/locandine/20191019-chiavenna.jpg"></a></td>
+						<td><a href="images/locandine/20190601-seriate.jpg" target="_blank"><img src="images/locandine/20190601-seriate.jpg" loading="lazy"></a></td>
+						<td><a href="images/locandine/20190622-bustoarsizio.jpg" target="_blank"><img src="images/locandine/20190622-bustoarsizio.jpg" loading="lazy"></a></td>
+						<td><a href="images/locandine/20191019-chiavenna.jpg" target="_blank"><img src="images/locandine/20191019-chiavenna.jpg" loading="lazy"></a></td>
 					</tr>
 					<tr>
-						<td><a href="images/locandine/20191027-colverde.jpg" target="_blank"><img src="images/locandine/20191027-colverde.jpg"></a></td>
-						<td><a href="images/locandine/20191215-legnano.jpg" target="_blank"><img src="images/locandine/20191215-legnano.jpg"></a></td>
-						<td><a href="images/locandine/20191221-cene.jpg" target="_blank"><img src="images/locandine/20191221-cene.jpg"></a></td>
+						<td><a href="images/locandine/20191027-colverde.jpg" target="_blank"><img src="images/locandine/20191027-colverde.jpg" loading="lazy"></a></td>
+						<td><a href="images/locandine/20191215-legnano.jpg" target="_blank"><img src="images/locandine/20191215-legnano.jpg" loading="lazy"></a></td>
+						<td><a href="images/locandine/20191221-cene.jpg" target="_blank"><img src="images/locandine/20191221-cene.jpg" loading="lazy"></a></td>
 					</tr>
 				</table></span>
 				<h3>2020</h3>
 				<span class="image main"><table>
 					<tr>
-						<td><a href="images/locandine/20200121-seriate.jpg" target="_blank"><img src="images/locandine/20200121-seriate.jpg"></a></td>
-						<td><a href="images/locandine/20200927-seriate.jpg" target="_blank"><img src="images/locandine/20200927-seriate.jpg"></a></td>
+						<td><a href="images/locandine/20200121-seriate.jpg" target="_blank"><img src="images/locandine/20200121-seriate.jpg" loading="lazy"></a></td>
+						<td><a href="images/locandine/20200927-seriate.jpg" target="_blank"><img src="images/locandine/20200927-seriate.jpg" loading="lazy"></a></td>
 						<td><img src="images/placeholder.png"></td>
 					</tr>
 				</table></span>
 				<h3>2021</h3>
 				<span class="image main"><table>
 					<tr>
-						<td><a href="images/locandine/20211016-Don_Carlo.jpg" target="_blank"><img src="images/locandine/20211016-Don_Carlo.jpg"></a></td>
-						<td><a href="images/locandine/20211114-Albino.jpg" target="_blank"><img src="images/locandine/20211114-Albino.jpg"></a></td>
-						<td><a href="images/locandine/20211211-biassono.jpg" target="_blank"><img src="images/locandine/20211211-biassono.jpg"></a></td>
+						<td><a href="images/locandine/20211016-Don_Carlo.jpg" target="_blank"><img src="images/locandine/20211016-Don_Carlo.jpg" loading="lazy"></a></td>
+						<td><a href="images/locandine/20211114-Albino.jpg" target="_blank"><img src="images/locandine/20211114-Albino.jpg" loading="lazy"></a></td>
+						<td><a href="images/locandine/20211211-biassono.jpg" target="_blank"><img src="images/locandine/20211211-biassono.jpg" loading="lazy"></a></td>
 					</tr>
 					<tr>
 						<td><img src="images/placeholder.png"></td>
-						<td><a href="images/locandine/20211219-collio.jpg" target="_blank"><img src="images/locandine/20211219-collio.jpg"></a></td>
+						<td><a href="images/locandine/20211219-collio.jpg" target="_blank"><img src="images/locandine/20211219-collio.jpg" loading="lazy"></a></td>
 						<td><img src="images/placeholder.png"></td>
 					</tr>
 				</table></span>
 				<h3>2022</h3>
 				<span class="image main"><table>
 					<tr>
-						<td><a href="images/locandine/20220430-canonica-d-adda.jpg" target="_blank"><img src="images/locandine/20220430-canonica-d-adda.jpg"></a></td>
-						<td><a href="images/locandine/20220716-Cane-Vione.jpg" target="_blank"><img src="images/locandine/20220716-Cane-Vione.jpg"></a></td>
-						<td><a href="images/locandine/20221001-tignale.jpg" target="_blank"><img src="images/locandine/20221001-tignale.jpg"></a></td>
+						<td><a href="images/locandine/20220430-canonica-d-adda.jpg" target="_blank"><img src="images/locandine/20220430-canonica-d-adda.jpg" loading="lazy"></a></td>
+						<td><a href="images/locandine/20220716-Cane-Vione.jpg" target="_blank"><img src="images/locandine/20220716-Cane-Vione.jpg" loading="lazy"></a></td>
+						<td><a href="images/locandine/20221001-tignale.jpg" target="_blank"><img src="images/locandine/20221001-tignale.jpg" loading="lazy"></a></td>
 					</tr>
 					<tr>
-						<td><a href="images/locandine/20221015-concorso.jpg" target="_blank"><img src="images/locandine/20221015-concorso.jpg"></a></td>
-						<td><a href="images/locandine/20221105-agnosine.jpg" target="_blank"><img src="images/locandine/20221105-agnosine.jpg"></a></td>
-						<td><a href="images/locandine/20221217-albino.jpg" target="_blank"><img src="images/locandine/20221217-albino.jpg"></a></td>
+						<td><a href="images/locandine/20221015-concorso.jpg" target="_blank"><img src="images/locandine/20221015-concorso.jpg" loading="lazy"></a></td>
+						<td><a href="images/locandine/20221105-agnosine.jpg" target="_blank"><img src="images/locandine/20221105-agnosine.jpg" loading="lazy"></a></td>
+						<td><a href="images/locandine/20221217-albino.jpg" target="_blank"><img src="images/locandine/20221217-albino.jpg" loading="lazy"></a></td>
 					</tr>
 				</table></span>
 				<h3>2023</h3>
 				<span class="image main"><table>
 					<tr>
-						<td><a href="images/locandine/20230401-malnate.jpg" target="_blank"><img src="images/locandine/20230401-malnate.jpg"></a></td>
-						<td><a href="images/locandine/20230506-un-tetto-per-tutti.jpg" target="_blank"><img src="images/locandine/20230506-un-tetto-per-tutti.jpg"></a></td>
-						<td><a href="images/locandine/20230513-burago.jpg" target="_blank"><img src="images/locandine/20230513-burago.jpg"></a></td>
+						<td><a href="images/locandine/20230401-malnate.jpg" target="_blank"><img src="images/locandine/20230401-malnate.jpg" loading="lazy"></a></td>
+						<td><a href="images/locandine/20230506-un-tetto-per-tutti.jpg" target="_blank"><img src="images/locandine/20230506-un-tetto-per-tutti.jpg" loading="lazy"></a></td>
+						<td><a href="images/locandine/20230513-burago.jpg" target="_blank"><img src="images/locandine/20230513-burago.jpg" loading="lazy"></a></td>
 					</tr>
 				</table></span>
 			</article>
@@ -141,7 +141,7 @@ table img{
 			<!-- About -->
 			<article id="about">
 				<h2 class="major">Dicono di noi</h2>
-				<span class="image main"><img src="images/about.jpg" alt="" /></span>
+				<span class="image main"><img src="images/about.jpg" loading="lazy" /></span>
 				<p><b>12/02/2019 - Uggiate Trevano</b><br>Da: Sig.ra Anna e Associazione Incontro tra Popoli<br><br><i>Voci leggere come fiocchi di neve. Scendono sul cuore e parlano di morte e di vita, di paure e speranza. Sono note di pace, messaggi che aprono le porte del futuro e insegnano la mitezza e la bontà. Le lacrime salgono negli occhi e attendono un altor canto, una nuova carezza per scendere pazienti e far sbocciare il fiore della meraviglia. Coro alpino. Voci di cielo. Grazie per la bella e generosa serata condivisa insieme. Grazie per la vostra bontà.</i></p>
 				<p><b>19/05/2019 - Duomo di Milano</b><br>Da: Maestro Emanuele Carlo Vianelli<br><br><i>Innanzitutto non nascondo lo stupore, subito tramutatosi in compiacimento artistico nell'aver constatato la notevole qualità vocale del coro, che, pur partendo dalla tipica vocalità "alpina" (stupendi i falsetti e i profondi bassi) sfoggia delle caratteristiche di timbro e di suono degne dei migliori cori da me conosciuti. Così abbiamo potuto elevare il nostro animo nell'ascolto di pagine della tradizione religiosa popolare, ma anche (e soprattutto) nell'ascolto di pagine polifoniche sacre di notevole impegno, rese con una interpretazione assolutamente ineccepibile dal punto di vista filologico e vivificate da un suono "di sintesi" unico e, alle mie orecchie, sinora inedito, nobilitato da un'intonazione pressoché perfetta. La lezione che come musicista ho potuto trarre dall'incontro con il "Coro Voci dell'Orobica" è stata quella di poter ancora una volta constatare come, date le premesse di una forte esperienza umana, quale è quella contenuta nei valori della tradizione del Corpo degli Alpini, possano germogliare risultati artistici di notevolissimo spessore. Auguro al coro di proseguire senza indugio nel portare avanti questa non facile esperienza, frutto di tenacia, caparbietà e competenza.</i></p>
 				<p><b>27/10/2019 - Chiesa di Parè (CO)</b><br>Da: Sig.ra Pierluigia Verga<br><br><i>Cari Alpini, anche quest'anno il Vostro bel concerto è stato profondo e toccante. Ogni volta, con i Vostri canti, sapete riportarci alle cose essenziali, a quelle verità che fanno la differenza nella vita e nella morte di ogni uomo. AISLA Como e anche io naturalmente, Vi ringraziamo con stima e affetto, anche per la generosità che sempre Vi contraddistingue.</i></p>
@@ -153,15 +153,15 @@ table img{
 			<!-- Foto coro -->
 			<article id="foto">
 					<h2 class="major">Galleria foto</h2>
-					<p><span class="image main"><img src="images/coristi/direttore.jpg" alt="" /></span>
+					<p><span class="image main"><img src="images/coristi/direttore.jpg" loading="lazy" /></span>
 					<b>Direttore</b>: Alfredo Magni</p>
-					<p><span class="image main"><img src="images/coristi/tenori_primi.jpg" alt="" /></span>
+					<p><span class="image main"><img src="images/coristi/tenori_primi.jpg" loading="lazy" /></span>
 					<b>Tenori primi</b>: Ivan Pace, Antonio Marzaroli, Marco Storti (Vicepresidente), Maurizio Bonin, Massimo Ricci</p>
-					<p><span class="image main"><img src="images/coristi/tenori_secondi.jpg" alt="" /></span>
+					<p><span class="image main"><img src="images/coristi/tenori_secondi.jpg" loading="lazy" /></span>
 					<b>Tenori secondi</b>: Enzo Stefanini, Aurelio Rampinelli, Massimo Sala, Fabio Denti (Presidente), Giacomo Tomasi</p>
-					<p><span class="image main"><img src="images/coristi/baritoni.jpg" alt="" /></span>
+					<p><span class="image main"><img src="images/coristi/baritoni.jpg" loading="lazy" /></span>
 					<b>Baritoni</b>: Corrado Mutti, Renato Gafforelli, Roberto Torresan, Giuseppe Carrara, Paolo Mongini</p>
-					<p><span class="image main"><img src="images/coristi/bassi.jpg" alt="" /></span>
+					<p><span class="image main"><img src="images/coristi/bassi.jpg" loading="lazy" /></span>
 					<b>Bassi</b>: Marco Nigro, Umberto Trainini, Paolo Masneri, Lucio Frangi, Paolo Tanza, Ruggero Lecchi</p>
 			</article>
 
