--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ table img{
 
 					<h3>Archivio video concerti</h3>
 					<p><ul>
-						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/558234516463968" target="_blank">[13/05/2023] 35<sup>a</sup> Rassegna Corale Albino Cattaneo"</a></li>
+						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/558234516463968" target="_blank">[13/05/2023] 35<sup>a</sup> Rassegna Corale "Albino Cattaneo"</a></li>
 						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/618462206843959" target="_blank">[06/05/2023] Concerto in occasione dell'iniziativa "Un tetto per tutti - quarta edizione"</a></li>
 						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/245426077888485" target="_blank">[01/04/2023] Pasqua Alpina - Santa Messa con il Gruppo Alpini di Malnate</a></li>
 						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/916877065941191" target="_blank">[17/12/2022] Concerto DICORANZA nell'Abbazia di San Benedetto, Albino (BG)</a></li>
