Aggiunta locandina concerto 15-07-2023

--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@ table img{
 						<td><a href="images/locandine/20230506-un-tetto-per-tutti.jpg" target="_blank"><img src="images/locandine/20230506-un-tetto-per-tutti.jpg" loading="lazy"></a></td>
 						<td><a href="images/locandine/20230513-burago.jpg" target="_blank"><img src="images/locandine/20230513-burago.jpg" loading="lazy"></a></td>
 					</tr>
+					<tr>
+						<td><img src="images/placeholder.png" loading="lazy"></td>
+						<td><a href="images/locandine/20230715-concesio.jpg" target="_blank"><img src="images/locandine/20230715-concesio.jpg" loading="lazy"></a></td>
+						<td><img src="images/placeholder.png" loading="lazy"></td>
+					</tr>
 				</table></span>
 			</article>
 
