--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ table img{
 </style>
 
 <head>
-	<title>Coro Voci Dell'Orobica</title>
+	<title>Coro V.D.O. - Voci Dell'Orobica</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=3" />
 	<link rel="icon" type="image/png" href="images/logo.png"/>
@@ -42,8 +42,8 @@ table img{
 			</div>
 			<div class="content">
 				<div class="inner">
-					<h1>Coro Voci dell'Orobica</h1>
-					<!--p> Sottotitolo </p-->
+					<h1>Coro V.D.O.</h1>
+					<p><b>V</b>oci <b>D</b>ell'<b>O</b>robica</p>
 				</div>
 			</div>
 			<nav>
@@ -64,7 +64,7 @@ table img{
 			<article id="intro">
 				<h2 class="major">La nostra storia</h2>
 				<span class="image main"><img src="images/storia.jpg" loading="lazy" /></span>
-				<p>Il Coro Voci dell'Orobica nasce nel Novembre 2017.</p>
+				<p>Il Coro V.D.O. (<b>V</b>oci <b>D</b>ell'<b>O</b>robica) nasce nel Novembre 2017.</p>
 				<p>Il nucleo originario dei coristi è costituito da Alpini che hanno fatto parte del coro militare della ormai sciolta Brigata Alpina Orobica che aveva sede a Merano (BZ).</p>
 				<p>La compagine corale vuole evocare sicuramente l'origine, ma, pur nella fedeltà dell'origine testimoniata dal cappello Alpino che alcuni indossano, si apre oggi ad accogliere tra le sue fila quanti rimangono affascinati dal canto di montagna e, più in generale, dal canto corale nelle sue diverse sfaccettature.</p>
 				<p>Fra le esibizioni recenti si annovera la prestigiosa animazione della liturgia del Duomo di Milano nel maggio 2019 nonché la performance artistica dell'Orobie Film Festival 2020 di Bergamo.</p>
@@ -173,6 +173,7 @@ table img{
 			<!-- Video -->
 			<article id="video">
 					<h2 class="major">Video</h2>
+					<span class="image main"><img src="images/concert.jpg" loading="lazy" /></span>
 					<h3>I nostri video su YouTube</h3>
 					<p><ul>
 						<li><a href="https://www.youtube.com/watch?v=lnTbl77CuJM" target="_blank">Benia calastoria</a></li>
