--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ table img{
 </style>
 
 <head>
-	<title>Coro V.D.O. - Voci Dell'Orobica</title>
+	<title>Coro V.d.O. - Voci Dell'Orobica</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=3" />
 	<link rel="icon" type="image/png" href="images/logo.png"/>
@@ -42,8 +42,8 @@ table img{
 			</div>
 			<div class="content">
 				<div class="inner">
-					<h1>Coro V.D.O.</h1>
-					<p><b>V</b>oci <b>D</b>ell'<b>O</b>robica</p>
+					<h1>Coro V.d.O.</h1>
+					<p><b>V</b>oci <b>d</b>ell'<b>O</b>robica</p>
 				</div>
 			</div>
 			<nav>
@@ -64,7 +64,7 @@ table img{
 			<article id="intro">
 				<h2 class="major">La nostra storia</h2>
 				<span class="image main"><img src="images/storia.jpg" loading="lazy" /></span>
-				<p>Il Coro V.D.O. (<b>V</b>oci <b>D</b>ell'<b>O</b>robica) nasce nel Novembre 2017.</p>
+				<p>Il Coro V.d.O. (<b>V</b>oci <b>d</b>ell'<b>O</b>robica) nasce nel Novembre 2017.</p>
 				<p>Il nucleo originario dei coristi è costituito da Alpini che hanno fatto parte del coro militare della ormai sciolta Brigata Alpina Orobica che aveva sede a Merano (BZ).</p>
 				<p>La compagine corale vuole evocare sicuramente l'origine, ma, pur nella fedeltà dell'origine testimoniata dal cappello Alpino che alcuni indossano, si apre oggi ad accogliere tra le sue fila quanti rimangono affascinati dal canto di montagna e, più in generale, dal canto corale nelle sue diverse sfaccettature.</p>
 				<p>Fra le esibizioni recenti si annovera la prestigiosa animazione della liturgia del Duomo di Milano nel maggio 2019 nonché la performance artistica dell'Orobie Film Festival 2020 di Bergamo.</p>
@@ -205,7 +205,7 @@ table img{
 				<li><a href="https://www.instagram.com/ilcorovocidellorobica/" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 				<li><a href="mailto:corovocidellorobica@gmail.com?subject=Contatto dal sito web" class="fas fa-envelope"></a></li>
 			</ul>
-			<p class="copyright">&copy; 2023 Coro Voci Dell'Orobica | P. IVA: 04383040161 | Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></p>
+			<p class="copyright">&copy; 2023 Coro V.d.O. | P. IVA: 04383040161 | Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></p>
 		</footer>
 
 	</div>
