--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ table img{
 </style>
 
 <head>
-	<title>Coro V.d.O. - Voci Dell'Orobica</title>
+	<title>Coro V.d.O. - Voci dell'Orobica</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=3" />
 	<link rel="icon" type="image/png" href="images/logo.png"/>
