Aggiunta locandina concerto 04-11-2023

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ table img{
 					<tr>
 						<td><a href="images/locandine/20230715-concesio.jpg" target="_blank"><img src="images/locandine/20230715-concesio.jpg" loading="lazy"></a></td>
 						<td><a href="images/locandine/20231021-san-vitale.jpg" target="_blank"><img src="images/locandine/20231021-san-vitale.jpg" loading="lazy"></a></td>
-						<td><img src="images/placeholder.png" loading="lazy"></td>
+						<td><a href="images/locandine/20231104-chignolo-disola.jpeg" target="_blank"><img src="images/locandine/20231104-chignolo-disola.jpeg" loading="lazy"></a></td>
 					</tr>
 				</table></span>
 			</article>
