Aggiunto link al video "Ave Maria di Joshua Himes"

--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@ table img{
 						<li><a href="https://www.youtube.com/watch?v=Hg9R4qiOjEQ" target="_blank">Il testamento del capitano</a></li>
 						<li><a href="https://www.youtube.com/watch?v=V24evEP0rfI" target="_blank">Sui Monti Scarpazi</a></li>
 						<li><a href="https://www.youtube.com/watch?v=V6Za6FuRtLY" target="_blank">Auguri di buon Natale 2022</a></li>
+						<li><a href="https://www.youtube.com/watch?v=K7WyChLYvG0" target="_blank">Ave Maria di Joshua Himes</a></li>
 					</ul></p>
 
 					<h3>Archivio video concerti</h3>
