Aggiunta locandina concerto 16-12-2023

--- a/index.html
+++ b/index.html
@@ -140,6 +140,11 @@ table img{
 						<td><a href="images/locandine/20231021-san-vitale.jpg" target="_blank"><img src="images/locandine/20231021-san-vitale.jpg" loading="lazy"></a></td>
 						<td><a href="images/locandine/20231104-chignolo-disola.jpeg" target="_blank"><img src="images/locandine/20231104-chignolo-disola.jpeg" loading="lazy"></a></td>
 					</tr>
+					<tr>
+						<td><img src="images/placeholder.png" loading="lazy"></a></td>
+						<td><a href="images/locandine/20231216-albino.jpg" target="_blank"><img src="images/locandine/20231216-albino.jpg" loading="lazy"></a></td>
+						<td><img src="images/placeholder.png" loading="lazy"></a></td>
+					</tr>
 				</table></span>
 			</article>
 
