--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@ table img{
 						<td><a href="images/locandine/20231104-chignolo-disola.jpeg" target="_blank"><img src="images/locandine/20231104-chignolo-disola.jpeg" loading="lazy"></a></td>
 					</tr>
 					<tr>
-						<td><img src="images/placeholder.png" loading="lazy"></a></td>
 						<td><a href="images/locandine/20231216-albino.jpg" target="_blank"><img src="images/locandine/20231216-albino.jpg" loading="lazy"></a></td>
+						<td><a href="images/locandine/20240203-barlassina.jpg" target="_blank"><img src="images/locandine/20240203-barlassina.jpg" loading="lazy"></a></td>
 						<td><img src="images/placeholder.png" loading="lazy"></a></td>
 					</tr>
 				</table></span>
