Aggiunta locandina concerto 02-03-2024

--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@ table img{
 				<h3>2024</h3>
 				<span class="image main"><table>
 					<tr>
-						<td><img src="images/placeholder.png" loading="lazy"></a></td>
 						<td><a href="images/locandine/20240203-barlassina.jpg" target="_blank"><img src="images/locandine/20240203-barlassina.jpg" loading="lazy"></a></td>
+						<td><a href="images/locandine/20240302-nova_milanese.jpg" target="_blank"><img src="images/locandine/20240302-nova_milanese.jpg" loading="lazy"></a></td>
 						<td><img src="images/placeholder.png" loading="lazy"></a></td>
 					</tr>
 				</table></span>
