--- a/index.html
+++ b/index.html
@@ -196,8 +196,9 @@ table img{
 						<li><a href="https://www.youtube.com/watch?v=K7WyChLYvG0" target="_blank">Ave Maria di Joshua Himes</a></li>
 					</ul></p>
 
-					<h3>Archivio video concerti</h3>
+					<h3>Registrazioni dei nostri concerti sulla pagina Facebook</h3>
 					<p><ul>
+						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/767109501942959" target="_blank">[03/02/2024] Concerto d'inverno. Teatro San Giulio, Barlassina (MB)</a></li>
 						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/229004836890310" target="_blank">[16/12/2023] Le Cinque Parallele - Evento musicale</a></li>
 						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/897157155746762" target="_blank">[04/11/2023] Celebrazioni del 4 novembre. Teatro comunale, Chignolo d'Isola (BG)</a></li>
 						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/7270284053004039" target="_blank">[21/10/2023] Celebrazioni del 4 novembre. Chiesa parrocchiale di San Vitale, Borgonato di Corte Franca (BS)</a></li>
