Modifica alla sezione foto
Rimozione della foto del direttore

--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@ table img{
 			<!-- Foto coro -->
 			<article id="foto">
 					<h2 class="major">Galleria foto</h2>
-					<p><span class="image main"><img src="images/coristi/direttore.jpg" loading="lazy" /></span>
-					<b>Direttore</b>: Alfredo Magni</p>
+					<!-- <p><span class="image main"><img src="images/coristi/direttore.jpg" loading="lazy" /></span>
+					<b>Direttore</b>: </p> -->
 					<p><span class="image main"><img src="images/coristi/tenori_primi.jpg" loading="lazy" /></span>
 					<b>Tenori primi</b>: Ivan Pace, Antonio Marzaroli, Marco Storti (Vicepresidente), Maurizio Bonin, Massimo Ricci</p>
 					<p><span class="image main"><img src="images/coristi/tenori_secondi.jpg" loading="lazy" /></span>
