Aggiunta di 2 locandine
- Aggiunta locandina concerto 16/11/2024
- Aggiunta locandina concerto 07/12/2024

--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@ table img{
 					<tr>
 						<td><a href="images/locandine/20240203-barlassina.jpg" target="_blank"><img src="images/locandine/20240203-barlassina.jpg" loading="lazy"></a></td>
 						<td><a href="images/locandine/20240302-nova_milanese.jpg" target="_blank"><img src="images/locandine/20240302-nova_milanese.jpg" loading="lazy"></a></td>
+						<td><a href="images/locandine/20241116-rassegna-corale.jpg" target="_blank"><img src="images/locandine/20241116-rassegna-corale.jpg" loading="lazy"></a></td>
+					</tr>
+					<tr>
+						<td><img src="images/placeholder.png" loading="lazy"></a></td>
+						<td><a href="images/locandine/20241207-rassegna-corale.jpg" target="_blank"><img src="images/locandine/20241207-rassegna-corale.jpg" loading="lazy"></a></td>
 						<td><img src="images/placeholder.png" loading="lazy"></a></td>
 					</tr>
 				</table></span>
