--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@ table img{
 						<td><a href="images/locandine/20241116-rassegna-corale.jpg" target="_blank"><img src="images/locandine/20241116-rassegna-corale.jpg" loading="lazy"></a></td>
 					</tr>
 					<tr>
-						<td><img src="images/placeholder.png" loading="lazy"></a></td>
 						<td><a href="images/locandine/20241207-rassegna-corale.jpg" target="_blank"><img src="images/locandine/20241207-rassegna-corale.jpg" loading="lazy"></a></td>
+						<td><a href="images/locandine/20241214-san-zenone.jpg" target="_blank"><img src="images/locandine/20241214-san-zenone.jpg" loading="lazy"></a></td>
 						<td><img src="images/placeholder.png" loading="lazy"></a></td>
 					</tr>
 				</table></span>
