Aggiunta pagina evento 2025
- Rimozione della galleria fotografica
- Aggiunta sezione relativa all'evento 2025
- Miglioramenti dell'impaginazione

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ table img{
 					<li><a href="#intro"><b>La nostra storia</b></a></li>
 					<li><a href="#concerti"><b>I nostri concerti</b></a></li>
 					<li><a href="#about"><b>Dicono di noi</b></a></li>
-					<li><a href="#foto"><b>Galleria foto</b></a></li>
+					<li><a href="#evento-2025"><b>Evento 2025</b></a></li>
 					<li><a href="#video"><b>Video</b></a></li>
 				</ul>
 			</nav>
@@ -173,51 +173,44 @@ table img{
 			</article>
 
 			<!-- Foto coro -->
-			<article id="foto">
-					<h2 class="major">Galleria foto</h2>
-					<!-- <p><span class="image main"><img src="images/coristi/direttore.jpg" loading="lazy" /></span>
-					<b>Direttore</b>: </p> -->
-					<p><span class="image main"><img src="images/coristi/tenori_primi.jpg" loading="lazy" /></span>
-					<b>Tenori primi</b>: Ivan Pace, Antonio Marzaroli, Marco Storti (Vicepresidente), Maurizio Bonin, Massimo Ricci</p>
-					<p><span class="image main"><img src="images/coristi/tenori_secondi.jpg" loading="lazy" /></span>
-					<b>Tenori secondi</b>: Enzo Stefanini, Aurelio Rampinelli, Massimo Sala, Fabio Denti (Presidente), Giacomo Tomasi</p>
-					<p><span class="image main"><img src="images/coristi/baritoni.jpg" loading="lazy" /></span>
-					<b>Baritoni</b>: Corrado Mutti, Renato Gafforelli, Roberto Torresan, Giuseppe Carrara, Paolo Mongini</p>
-					<p><span class="image main"><img src="images/coristi/bassi.jpg" loading="lazy" /></span>
-					<b>Bassi</b>: Marco Nigro, Umberto Trainini, Paolo Masneri, Lucio Frangi, Paolo Tanza, Ruggero Lecchi</p>
+			<article id="evento-2025">
+				<h2 class="major">Evento 2025</h2>
+				<span class="image main"><img src="images/evento-2025.jpg" loading="lazy" /></span>
+				<p>Nel ricorrere dell'80° anniversario dal termine del secondo conflitto mondiale, stiamo allestendo un recital in concerto dove, con l'esecuzione di canti autentici degli Alpini, ripercorriamo la storia del corpo da Adua sino alla Guerra di Liberazione; il tutto cadenzato da letture con storie e testimonianze coeve.</p>
+				<p>Crediamo sia un modo inedito per svecchiare l'immagine del canto alpino e degli Alpini stessi presso le nuove generazioni, ma soprattutto per rendere giustizia ad una memoria che spesso è travisata o si fa retorica sterile.</p>
 			</article>
 
 			<!-- Video -->
 			<article id="video">
-					<h2 class="major">Video</h2>
-					<span class="image main"><img src="images/concert.jpg" loading="lazy" /></span>
-					<h3>I nostri video su YouTube</h3>
-					<p><ul>
-						<li><a href="https://www.youtube.com/watch?v=lnTbl77CuJM" target="_blank">Benia calastoria</a></li>
-						<li><a href="https://www.youtube.com/watch?v=Hg9R4qiOjEQ" target="_blank">Il testamento del capitano</a></li>
-						<li><a href="https://www.youtube.com/watch?v=V24evEP0rfI" target="_blank">Sui Monti Scarpazi</a></li>
-						<li><a href="https://www.youtube.com/watch?v=V6Za6FuRtLY" target="_blank">Auguri di buon Natale 2022</a></li>
-						<li><a href="https://www.youtube.com/watch?v=K7WyChLYvG0" target="_blank">Ave Maria di Joshua Himes</a></li>
-					</ul></p>
+				<h2 class="major">Video</h2>
+				<span class="image main"><img src="images/concert.jpg" loading="lazy" /></span>
+				<h3>I nostri video su YouTube</h3>
+				<p><ul>
+					<li><a href="https://www.youtube.com/watch?v=lnTbl77CuJM" target="_blank">Benia calastoria</a></li>
+					<li><a href="https://www.youtube.com/watch?v=Hg9R4qiOjEQ" target="_blank">Il testamento del capitano</a></li>
+					<li><a href="https://www.youtube.com/watch?v=V24evEP0rfI" target="_blank">Sui Monti Scarpazi</a></li>
+					<li><a href="https://www.youtube.com/watch?v=V6Za6FuRtLY" target="_blank">Auguri di buon Natale 2022</a></li>
+					<li><a href="https://www.youtube.com/watch?v=K7WyChLYvG0" target="_blank">Ave Maria di Joshua Himes</a></li>
+				</ul></p>
 
-					<h3>Registrazioni dei nostri concerti sulla pagina Facebook</h3>
-					<p><ul>
-						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/767109501942959" target="_blank">[03/02/2024] Concerto d'inverno. Teatro San Giulio, Barlassina (MB)</a></li>
-						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/229004836890310" target="_blank">[16/12/2023] Le Cinque Parallele - Evento musicale</a></li>
-						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/897157155746762" target="_blank">[04/11/2023] Celebrazioni del 4 novembre. Teatro comunale, Chignolo d'Isola (BG)</a></li>
-						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/7270284053004039" target="_blank">[21/10/2023] Celebrazioni del 4 novembre. Chiesa parrocchiale di San Vitale, Borgonato di Corte Franca (BS)</a></li>
-						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/558234516463968" target="_blank">[13/05/2023] 35<sup>a</sup> Rassegna Corale "Albino Cattaneo"</a></li>
-						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/618462206843959" target="_blank">[06/05/2023] Concerto in occasione dell'iniziativa "Un tetto per tutti - quarta edizione"</a></li>
-						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/245426077888485" target="_blank">[01/04/2023] Pasqua Alpina - Santa Messa con il Gruppo Alpini di Malnate</a></li>
-						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/916877065941191" target="_blank">[17/12/2022] Concerto DICORANZA nell'Abbazia di San Benedetto, Albino (BG)</a></li>
-						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/538069034811107" target="_blank">[05/11/2022] Concerto a ricordo dell'amico Raffaele</a></li>
-						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/505804954350935" target="_blank">[01/10/2022] Concerto al Santuario di Montecastello, Tignale (BS)</a></li>
-						<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/788446852513517" target="_blank">[16/07/2022] Concerto nella Chiesa di San Gregorio Magno, Canè di Vione (BS)</a></li>
-					</ul></p>
-					<p>Altri video sul <a href="https://www.youtube.com/@corovocidellorobica/videos" target="_blank">canale YouTube</a> e la <a href="https://www.facebook.com/ilcorovocidellorobica/videos" target="_blank">pagina Facebook</a></p>
+				<h3>Registrazioni dei nostri concerti sulla pagina Facebook</h3>
+				<p><ul>
+					<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/767109501942959" target="_blank">[03/02/2024] Concerto d'inverno. Teatro San Giulio, Barlassina (MB)</a></li>
+					<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/229004836890310" target="_blank">[16/12/2023] Le Cinque Parallele - Evento musicale</a></li>
+					<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/897157155746762" target="_blank">[04/11/2023] Celebrazioni del 4 novembre. Teatro comunale, Chignolo d'Isola (BG)</a></li>
+					<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/7270284053004039" target="_blank">[21/10/2023] Celebrazioni del 4 novembre. Chiesa parrocchiale di San Vitale, Borgonato di Corte Franca (BS)</a></li>
+					<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/558234516463968" target="_blank">[13/05/2023] 35<sup>a</sup> Rassegna Corale "Albino Cattaneo"</a></li>
+					<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/618462206843959" target="_blank">[06/05/2023] Concerto in occasione dell'iniziativa "Un tetto per tutti - quarta edizione"</a></li>
+					<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/245426077888485" target="_blank">[01/04/2023] Pasqua Alpina - Santa Messa con il Gruppo Alpini di Malnate</a></li>
+					<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/916877065941191" target="_blank">[17/12/2022] Concerto DICORANZA nell'Abbazia di San Benedetto, Albino (BG)</a></li>
+					<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/538069034811107" target="_blank">[05/11/2022] Concerto a ricordo dell'amico Raffaele</a></li>
+					<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/505804954350935" target="_blank">[01/10/2022] Concerto al Santuario di Montecastello, Tignale (BS)</a></li>
+					<li><a href="https://www.facebook.com/ilcorovocidellorobica/videos/788446852513517" target="_blank">[16/07/2022] Concerto nella Chiesa di San Gregorio Magno, Canè di Vione (BS)</a></li>
+				</ul></p>
+				<p>Altri video sul <a href="https://www.youtube.com/@corovocidellorobica/videos" target="_blank">canale YouTube</a> e la <a href="https://www.facebook.com/ilcorovocidellorobica/videos" target="_blank">pagina Facebook</a></p>
 			</article>
 
-	</div>
+		</div>
 
 		<!-- Footer -->
 		<footer id="footer">
