Aggiunta contatto per informazioni evento 2025

--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@ table img{
 				<span class="image main"><img src="images/evento-2025.jpg" loading="lazy" /></span>
 				<p>Nel ricorrere dell'80° anniversario dal termine del secondo conflitto mondiale, stiamo allestendo un recital in concerto dove, con l'esecuzione di canti autentici degli Alpini, ripercorriamo la storia del corpo da Adua sino alla Guerra di Liberazione; il tutto cadenzato da letture con storie e testimonianze coeve.</p>
 				<p>Crediamo sia un modo inedito per svecchiare l'immagine del canto alpino e degli Alpini stessi presso le nuove generazioni, ma soprattutto per rendere giustizia ad una memoria che spesso è travisata o si fa retorica sterile.</p>
+				<p>Per maggiori informazioni scriveteci all'indirizzo email <a href="mailto:corovocidellorobica@gmail.com?subject=Richiesta informazioni evento 2025">corovocidellorobica@gmail.com</a></p>
 			</article>
 
 			<!-- Video -->
