--- a/index.html
+++ b/index.html
@@ -158,6 +158,14 @@ table img{
 						<td><img src="images/placeholder.png" loading="lazy"></a></td>
 					</tr>
 				</table></span>
+				<h3>2025</h3>
+				<span class="image main"><table>
+					<tr>
+						<td><img src="images/placeholder.png" loading="lazy"></a></td>
+						<td><a href="images/locandine/20250607-caldana.jpg" target="_blank"><img src="images/locandine/20250607-caldana.jpg" loading="lazy"></a></td>
+						<td><img src="images/placeholder.png" loading="lazy"></a></td>
+					</tr>
+				</table></span>
 			</article>
 
 			<!-- About -->
