Aggiunta di 2 locandine
- aggiunta la locandina del concerto del 18/09/2025
- aggiunta la locandina del concerto del 28/09/2025

--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@ table img{
 				<h3>2025</h3>
 				<span class="image main"><table>
 					<tr>
-						<td><img src="images/placeholder.png" loading="lazy"></a></td>
 						<td><a href="images/locandine/20250607-caldana.jpg" target="_blank"><img src="images/locandine/20250607-caldana.jpg" loading="lazy"></a></td>
-						<td><img src="images/placeholder.png" loading="lazy"></a></td>
+						<td><a href="images/locandine/20250918-seriate.jpeg" target="_blank"><img src="images/locandine/20250918-seriate.jpeg" loading="lazy"></a></td>
+						<td><a href="images/locandine/20250928-pare.jpeg" target="_blank"><img src="images/locandine/20250928-pare.jpeg" loading="lazy"></a></td>
 					</tr>
 				</table></span>
 			</article>
