--- a/index.html
+++ b/index.html
@@ -165,6 +165,11 @@ table img{
 						<td><a href="images/locandine/20250918-seriate.jpeg" target="_blank"><img src="images/locandine/20250918-seriate.jpeg" loading="lazy"></a></td>
 						<td><a href="images/locandine/20250928-pare.jpeg" target="_blank"><img src="images/locandine/20250928-pare.jpeg" loading="lazy"></a></td>
 					</tr>
+					<tr>
+						<td><img src="images/placeholder.png" loading="lazy"></a></td>
+						<td><a href="images/locandine/20251018-monza.jpeg" target="_blank"><img src="images/locandine/20251018-monza.jpeg" loading="lazy"></a></td>
+						<td><img src="images/placeholder.png" loading="lazy"></a></td>
+					</tr>
 				</table></span>
 			</article>
 
